test/tests/stages/5_local_variables/valid/extra_credit/compound_mod.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(to_mod)
  =
  const int(5)
  ;
  identifier(to_mod)
  %=
  const int(3)
  ;
  return
  identifier(to_mod)
  ;
  }
