test/tests/stages/5_local_variables/invalid_parse/invalid_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  identifier(bar)
  =
  const int(3)
  ;
  return
  identifier(bar)
  ;
  }
